[package]
name = "wasmsign"
version = "0.1.2"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Add and verify digital signatures to/from WASM binaries"
license-file = "LICENSE"
homepage = "https://github.com/jedisct1/wasmsign"
repository = "https://github.com/jedisct1/wasmsign.git"
documentation = "https://github.com/jedisct1/wasmsign/blob/master/README.md"

[dependencies]
byteorder = "1"
clap = "2"
ed25519-dalek = "0.9"
failure = "0.1"
parity-wasm = "0.35"
rand = "0.6"
sha2 = "0.8"
